--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_todos"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_todos_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -15,13 +15,22 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="http"
+                    android:host="www.mytodos.com" />
+            </intent-filter>
         </activity>
 
         <activity
             android:name=".StartLogoActivity"
             android:label="@string/title_activity_start_logo"
             android:theme="@style/AppTheme.NoActionBar">
-            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
@@ -45,7 +54,8 @@
                 android:value=".LoadMonthActivity" />
         </activity>
 
-        <activity android:name=".ShowAllRemsActivity"
+        <activity
+            android:name=".ShowAllRemsActivity"
             android:label=""
             android:screenOrientation="portrait">
             <meta-data
